code cleanup and migration to v3